# distributed-uvm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  HANDOFF.md  HARDWARE-TEST-PLAN.md  Makefile  PITFALLS.md  README.md  REPORT.md
.github/workflows/: branch-name.yml  ci.yml
config/: duvm-daemon.service  duvm-kmod.service  duvm-memserver.service  duvm.toml
crates/duvm-backend-compress/: Cargo.toml
crates/duvm-backend-compress/src/: lib.rs
crates/duvm-backend-memory/: Cargo.toml
crates/duvm-backend-memory/src/: lib.rs
crates/duvm-backend-rdma/: Cargo.toml  build.rs
crates/duvm-backend-rdma/src/: ffi.rs  lib.rs  server.rs  shim.c
crates/duvm-backend-tcp/: Cargo.toml
crates/duvm-backend-tcp/src/: lib.rs
crates/duvm-backend-trait/: Cargo.toml
crates/duvm-backend-trait/src/: lib.rs
crates/duvm-common/: Cargo.toml
crates/duvm-common/src/: lib.rs  page.rs  protocol.rs  ring.rs  stats.rs
crates/duvm-ctl/: Cargo.toml
crates/duvm-ctl/src/: main.rs
crates/duvm-daemon/: Cargo.toml  build.rs
crates/duvm-daemon/examples/: demo_distributed.rs  demo_engine.rs  demo_proof.rs  demo_rdma.rs  demo_remote_uffd.rs  demo_uffd.rs
crates/duvm-daemon/src/: config.rs  engine.rs  kmod_ring.rs  lib.rs  main.rs  policy.rs  uffd.rs  uffd_ffi.rs  uffd_helper.c
crates/duvm-memserver/: Cargo.toml
crates/duvm-memserver/src/: main.rs
crates/duvm-tests/: Cargo.toml
crates/duvm-tests/src/: lib.rs
crates/duvm-tests/tests/: bench.rs  comprehensive_test.rs  integration_test.rs  tcp_integration.rs
crates/libduvm/: Cargo.toml  build.rs  cbindgen.toml
crates/libduvm/include/: duvm.h
crates/libduvm/src/: ffi.rs  lib.rs  pool.rs
docs/: ARCHITECTURE.md
duvm-kmod/: Makefile
duvm-kmod/include/: duvm_kmod.h
duvm-kmod/src/: .main.o.cmd  .ring.o.cmd  .swap.o.cmd  main.c  ring.c  swap.c
examples/: demo_c_ffi.c
research/: architecture-options.md  architecture.md  decisions.md  gap-analysis.md  gpu-uvm-investigation.md  plan-ci-rdma-3machine.md  plan-universal-duvm.md  prior-art-phase2.md  prior-art.md  rdma-investigation.md  transport-decision.md
scripts/: install.sh  preflight.sh  setup-hardware-test.sh  setup-kmod-for-testing.sh  swap_pressure_test.c  test-3machine-qemu.sh  test-distributed-qemu.sh  test-kmod-daemon-qemu.sh  test-kmod-qemu.sh  test-memserver-concurrent-qemu.sh  test-mutual-oom-qemu.sh  test-rdma-qemu.sh
