[package]
name = "duvm-backend-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory backend for duvm (testing and development)"

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
