[package]
name = "duvm-backend-rdma"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDMA remote memory backend for duvm (libibverbs + librdmacm)"

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }

[build-dependencies]
cc = "1"
