[package]
name = "duvm-backend-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TCP remote memory backend for duvm"

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
