[package]
name = "duvm-backend-trait"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend plugin trait definition for duvm"

[dependencies]
duvm-common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
