[package]
name = "duvm-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and ring buffer protocol for duvm"

[dependencies]
bytemuck = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
crossbeam-utils = { workspace = true }
libc = { workspace = true }
