[package]
name = "duvm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "User-space daemon for duvm distributed memory"

[[bin]]
name = "duvm-daemon"
path = "src/main.rs"

[lib]
name = "duvm_daemon"
path = "src/lib.rs"

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
duvm-backend-memory = { workspace = true }
duvm-backend-compress = { workspace = true }
duvm-backend-tcp = { workspace = true }
libduvm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
cc = "1"
