[package]
name = "duvm-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for duvm"
publish = false

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[[test]]
name = "bench"
path = "tests/bench.rs"

[[test]]
name = "tcp_integration"
path = "tests/tcp_integration.rs"

[[test]]
name = "comprehensive"
path = "tests/comprehensive_test.rs"

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
duvm-backend-memory = { workspace = true }
duvm-backend-compress = { workspace = true }
duvm-backend-tcp = { workspace = true }
duvm-backend-rdma = { workspace = true }
duvm-daemon = { workspace = true }
libduvm = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
serde_json = { workspace = true }
