[package]
name = "libduvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "User-space library for duvm distributed memory (Rust + C FFI)"

[lib]
name = "duvm"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
duvm-common = { workspace = true }
duvm-backend-trait = { workspace = true }
duvm-backend-memory = { workspace = true }
duvm-backend-compress = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
cbindgen = "0.29"
